--- a/docs/faststore/components/organisms/hero.mdx
+++ b/docs/faststore/components/organisms/hero.mdx
@@ -9,36 +9,16 @@ components:
   - HeroHeader.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/organisms/Hero)
+
 The `Hero` component is a full-width banner presented on the above-the-fold section of a web page. It serves as the first glimpse of your brand's identity and messaging.The `Hero` component is a compound of the following:
 
 - `HeroImage`: wraps the Hero image.
 - `HeroHeader`: wraps the Hero textual content. It may contain a title, description, and a call-to-action button.
 
----
+Use the `Hero` component as the first element of your Home, brand, or collections pages.
 
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { Hero, HeroImage, HeroHeader } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/organisms/Hero/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Usage
-
-<Tabs items={['Example', 'Code']} defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection>
       <Hero>
@@ -79,26 +59,200 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Props
+## Usage
 
-All hero-related components support all attributes also supported by the `<div>` tag.
-Besides those attributes, the following props are also supported:
+### Import the component
 
-### Hero
+```tsx
+import { Hero, HeroImage, HeroHeader } from "@faststore/ui";
+```
 
-<ComponentPropsSection component="Hero" />
+### Import styles
 
-### HeroImage
+To apply styles, include the following in your stylesheet:
 
-<ComponentPropsSection component="HeroImage" />
+```scss
+@import "@faststore/ui/src/components/organisms/Hero/styles.scss";
+```
 
-### HeroHeader
-
-<ComponentPropsSection component="HeroHeader" />
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Design Tokens
+## Examples
+
+### Variants
+
+#### Primary
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Hero>
+        <HeroImage>
+          <img
+            alt="Controller on a table"
+            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+          />
+        </HeroImage>
+        <HeroHeader
+          title="Explore more about our amazing products"
+          subtitle="All the amazing products from the brands we partner with."
+          link="/"
+          linkText="See more"
+        />
+      </Hero>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <Hero>
+      <HeroImage>
+        <img
+          alt="Controller on a table"
+          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+        />
+      </HeroImage>
+      <HeroHeader
+        title="Explore more about our amazing products"
+        subtitle="All the amazing products from the brands we partner with."
+        link="/"
+        linkText="See more"
+      />
+    </Hero>
+    ```
+  </Tab>
+</Tabs>
+
+#### Secondary
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Hero variant="secondary">
+        <HeroImage>
+          <img
+            alt="Controller on a table"
+            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+          />
+        </HeroImage>
+        <HeroHeader
+          title="Explore more about our amazing products"
+          subtitle="All the amazing products from the brands we partner with."
+          link="/"
+          linkText="See more"
+          icon={<Icon name="House" />}
+        />
+      </Hero>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <Hero variant="secondary">
+      <HeroImage>
+        <img
+          alt="Controller on a table"
+          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+        />
+      </HeroImage>
+      <HeroHeader
+        title="Explore more about our amazing products"
+        subtitle="All the amazing products from the brands we partner with."
+        link="/"
+        linkText="See more"
+        icon={<Icon name="House" />}
+      />
+    </Hero>
+    ```
+  </Tab>
+</Tabs>
+
+### Color variants
+
+#### Light
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Hero colorVariant="light">
+        <HeroImage>
+          <img
+            alt="Controller on a table"
+            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+          />
+        </HeroImage>
+        <HeroHeader
+          title="Explore more about our amazing products"
+          subtitle="All the amazing products from the brands we partner with."
+          link="/"
+          linkText="See more"
+        />
+      </Hero>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <Hero colorVariant="light">
+      <HeroImage>
+        <img
+          alt="Controller on a table"
+          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+        />
+      </HeroImage>
+      <HeroHeader
+        title="Explore more about our amazing products"
+        subtitle="All the amazing products from the brands we partner with."
+        link="/"
+        linkText="See more"
+      />
+    </Hero>
+    ```
+  </Tab>
+</Tabs>
+
+#### Accent
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Hero colorVariant="accent">
+        <HeroImage>
+          <img
+            alt="Controller on a table"
+            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+          />
+        </HeroImage>
+        <HeroHeader
+          title="Explore more about our amazing products"
+          subtitle="All the amazing products from the brands we partner with."
+          link="/"
+          linkText="See more"
+        />
+      </Hero>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <Hero colorVariant="accent">
+      <HeroImage>
+        <img
+          alt="Controller on a table"
+          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
+        />
+      </HeroImage>
+      <HeroHeader
+        title="Explore more about our amazing products"
+        subtitle="All the amazing products from the brands we partner with."
+        link="/"
+        linkText="See more"
+      />
+    </Hero>
+    ```
+  </Tab>
+</Tabs>
+---
+
+## Design tokens
 
 <TokenTable>
   <TokenRow token="--fs-hero-text-size" value="var(--fs-text-size-lead)" />
@@ -149,45 +303,6 @@ Besides those attributes, the following props are also supported:
 
 #### Primary
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Hero>
-        <HeroImage>
-          <img
-            alt="Controller on a table"
-            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-          />
-        </HeroImage>
-        <HeroHeader
-          title="Explore more about our amazing products"
-          subtitle="All the amazing products from the brands we partner with."
-          link="/"
-          linkText="See more"
-        />
-      </Hero>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Hero>
-      <HeroImage>
-        <img
-          alt="Controller on a table"
-          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-        />
-      </HeroImage>
-      <HeroHeader
-        title="Explore more about our amazing products"
-        subtitle="All the amazing products from the brands we partner with."
-        link="/"
-        linkText="See more"
-      />
-    </Hero>
-    ```
-  </Tab>
-</Tabs>
-
 <TokenTable>
   <TokenRow token="--fs-hero-primary-image-height-mobile" value="15rem" />
   <TokenRow token="--fs-hero-primary-image-height-desktop" value="29rem" />
@@ -198,47 +313,6 @@ Besides those attributes, the following props are also supported:
 </TokenTable>
 
 #### Secondary
-
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Hero variant="secondary">
-        <HeroImage>
-          <img
-            alt="Controller on a table"
-            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-          />
-        </HeroImage>
-        <HeroHeader
-          title="Explore more about our amazing products"
-          subtitle="All the amazing products from the brands we partner with."
-          link="/"
-          linkText="See more"
-          icon={<Icon name="House" />}
-        />
-      </Hero>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Hero variant="secondary">
-      <HeroImage>
-        <img
-          alt="Controller on a table"
-          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-        />
-      </HeroImage>
-      <HeroHeader
-        title="Explore more about our amazing products"
-        subtitle="All the amazing products from the brands we partner with."
-        link="/"
-        linkText="See more"
-        icon={<Icon name="House" />}
-      />
-    </Hero>
-    ```
-  </Tab>
-</Tabs>
 
 <TokenTable>
   <TokenRow token="--fs-hero-secondary-image-height-mobile" value="11.25rem" />
@@ -258,45 +332,6 @@ Besides those attributes, the following props are also supported:
 
 #### Main
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Hero>
-        <HeroImage>
-          <img
-            alt="Controller on a table"
-            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-          />
-        </HeroImage>
-        <HeroHeader
-          title="Explore more about our amazing products"
-          subtitle="All the amazing products from the brands we partner with."
-          link="/"
-          linkText="See more"
-        />
-      </Hero>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Hero>
-      <HeroImage>
-        <img
-          alt="Controller on a table"
-          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-        />
-      </HeroImage>
-      <HeroHeader
-        title="Explore more about our amazing products"
-        subtitle="All the amazing products from the brands we partner with."
-        link="/"
-        linkText="See more"
-      />
-    </Hero>
-    ```
-  </Tab>
-</Tabs>
-
 <TokenTable>
   <TokenRow
     token="--fs-hero-main-bkg-color"
@@ -312,45 +347,6 @@ Besides those attributes, the following props are also supported:
 
 #### Light
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Hero colorVariant="light">
-        <HeroImage>
-          <img
-            alt="Controller on a table"
-            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-          />
-        </HeroImage>
-        <HeroHeader
-          title="Explore more about our amazing products"
-          subtitle="All the amazing products from the brands we partner with."
-          link="/"
-          linkText="See more"
-        />
-      </Hero>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Hero colorVariant="light">
-      <HeroImage>
-        <img
-          alt="Controller on a table"
-          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-        />
-      </HeroImage>
-      <HeroHeader
-        title="Explore more about our amazing products"
-        subtitle="All the amazing products from the brands we partner with."
-        link="/"
-        linkText="See more"
-      />
-    </Hero>
-    ```
-  </Tab>
-</Tabs>
-
 <TokenTable>
   <TokenRow
     token="--fs-hero-light-bkg-color"
@@ -365,45 +361,6 @@ Besides those attributes, the following props are also supported:
 </TokenTable>
 
 #### Accent
-
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Hero colorVariant="accent">
-        <HeroImage>
-          <img
-            alt="Controller on a table"
-            src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-          />
-        </HeroImage>
-        <HeroHeader
-          title="Explore more about our amazing products"
-          subtitle="All the amazing products from the brands we partner with."
-          link="/"
-          linkText="See more"
-        />
-      </Hero>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx
-    <Hero colorVariant="accent">
-      <HeroImage>
-        <img
-          alt="Controller on a table"
-          src="https://storeframework.vtexassets.com/arquivos/ids/190897/Photo.jpg"
-        />
-      </HeroImage>
-      <HeroHeader
-        title="Explore more about our amazing products"
-        subtitle="All the amazing products from the brands we partner with."
-        link="/"
-        linkText="See more"
-      />
-    </Hero>
-    ```
-  </Tab>
-</Tabs>
 
 <TokenTable>
   <TokenRow
@@ -421,13 +378,9 @@ Besides those attributes, the following props are also supported:
 
 ---
 
-## Use cases
+## Data attributes
 
-Use the `Hero` component as the first element of your Home, brand, or collections pages.
-
----
-
-## Customization
+You can target and override `Hero` styles using the following data attributes:
 
 `data-fs-hero`
 
@@ -450,6 +403,25 @@ Use the `Hero` component as the first element of your Home, brand, or collection
 `data-fs-hero-variant="primary" | "secondary"`
 
 `data-fs-hero-color-variant="main" | "light" | "accent"`
+
+---
+
+## Props
+
+All hero-related components support all attributes also supported by the `<div>` tag.
+Besides those attributes, the following props are also supported:
+
+### Hero
+
+<ComponentPropsSection component="Hero" />
+
+### HeroImage
+
+<ComponentPropsSection component="HeroImage" />
+
+### HeroHeader
+
+<ComponentPropsSection component="HeroHeader" />
 
 ---
 
