--- a/docs/faststore/components/organisms/out-of-stock.mdx
+++ b/docs/faststore/components/organisms/out-of-stock.mdx
@@ -7,29 +7,10 @@ components:
   - OutOfStock.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/organisms/OutOfStock)
+
 This `OutOfStock` component is used to announce to users that the product is out of stock. It also asks for their contact to let they know when the product arrives.
 
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { OutOfStock } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/organisms/OutOfStock/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Usage
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -61,13 +42,28 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Props
+## Usage
 
-<ComponentPropsSection component="OutOfStock" />
+### Import the component
+
+```tsx
+import { OutOfStock } from '@faststore/ui'
+```
+
+### Import styles
+
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import '@faststore/ui/src/components/organisms/OutOfStock/styles.scss';
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
 
 ---
 
-## Design Tokens
+## Design tokens
 
 ### Nested Elements
 
@@ -133,7 +129,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
+
+You can target and override `OutOfStock` styles using the following data attributes:
 
 `data-fs-out-of-stock`
 
@@ -142,3 +140,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 `data-fs-out-of-stock-message`
 
 `data-fs-out-of-stock-button`
+
+---
+
+## Props
+
+<ComponentPropsSection component="OutOfStock" />
