--- a/docs/faststore/components/organisms/payment-methods.mdx
+++ b/docs/faststore/components/organisms/payment-methods.mdx
@@ -7,29 +7,9 @@ components:
   - PaymentMethods.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/organisms/PaymentMethods)
+
 The `PaymentMethods` component displays the logos of the available payment options in a store.
-
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { PaymentMethods } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/organisms/PaymentMethods/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Usage
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -59,17 +39,27 @@ export const flags = [
   </Tab>
 </Tabs>
 
+## Usage
+
+### Import the component
+
+```tsx
+import { PaymentMethods } from "@faststore/ui";
+```
+
+### Import styles
+
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import "@faststore/ui/src/components/organisms/PaymentMethods/styles.scss";
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
 ---
 
-## Props
-
-<ComponentPropsSection component="PaymentMethods" />
-
-## Flag
-
-<PropsSection propsList={propsFlag} />
-
-## Design Tokens
+## Design tokens
 
 ### Nested Elements
 
@@ -133,8 +123,9 @@ export const flags = [
 
 ---
 
-## Customization
+## Data attributes
 
+You can target and override `PaymentMethods` styles using the following data attributes:
 `data-fs-payment-methods`
 
 `data-fs-payment-methods-title`
@@ -142,3 +133,13 @@ export const flags = [
 `data-fs-payment-methods-flags`
 
 `data-fs-payment-methods-flag`
+
+---
+
+## Props
+
+<ComponentPropsSection component="PaymentMethods" />
+
+## Flag
+
+<PropsSection propsList={propsFlag} />
