--- a/docs/faststore/components/organisms/shipping-simulation.mdx
+++ b/docs/faststore/components/organisms/shipping-simulation.mdx
@@ -6,29 +6,10 @@ sidebar_custom_props:
 components:
   - ShippingSimulation.tsx
 ---
+
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/organisms/ShippingSimulation)
+
 The `ShippingSimulation` component lets customers set the `PostalCode` and see the shipping options in the `PDP`.
-
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { ShippingSimulation } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/organisms/ShippingSimulation/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Usage
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -96,19 +77,27 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Props
+## Usage
 
-### ShippingSimulation
+### Import the component
 
-<ComponentPropsSection component="ShippingSimulation" />
+```tsx
+import { ShippingSimulation } from "@faststore/ui";
+```
 
-### ShippingSLA
+### Import styles
 
-<PropsSection propsList={propsShippingSla} />
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import "@faststore/ui/src/components/organisms/ShippingSimulation/styles.scss";
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -185,9 +174,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `ShippingSimulation` styles using the following data attributes:
 
 `data-fs-shipping-simulation`
 
@@ -200,3 +189,15 @@ For further customization, you can use the following data attributes:
 `data-fs-shipping-simulation-subtitle`
 
 `data-fs-shipping-simulation-location`
+
+---
+
+## Props
+
+### ShippingSimulation
+
+<ComponentPropsSection component="ShippingSimulation" />
+
+### ShippingSLA
+
+<PropsSection propsList={propsShippingSla} />
